--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="prototype_11">
-        <div>
-            <h1>ADC GEN</h1>
-            <P>ghdgshgj kjdaskjkj dlskl;dkalks ;ldsa;l;l jdaskjjk</P>
-            <button class="but">Генерить</button>
+        <div class="text">
+            <h1>ADC Стикерпак</h1>
+            <P>Сгенерируй свой уникальный стикерпак состоящий из самых разных элементов</P>
+            <button class="but">Создать</button>
         </div>
 
     </div>
