--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@
 
 <body>
     <div class="prototype_11">
-        <div class="navbar">
-            <img src="./images/ADCLogo.svg" alt="">
-
-        </div>
-        <div class="text">
-            <h1>ADC Стикерпак</h1>
-            <P>Сгенерируй свой уникальный стикерпак состоящий из самых разных элементов</P>
-            <button class="but">Создать</button>
+        <div class="info">
+            <div class="navbar">
+                <img src="./images/ADCLogo.svg" alt="">
+                <h2>space / stickers</h2>
+            </div>
+            <div class="text">
+                <h1>ADC Стикерпак</h1>
+                <P>Сгенерируй свой уникальный стикерпак состоящий из&nbsp;самых разных элементов</P>
+                <button class="but">Создать</button>
+            </div>
+            <div class="about">
+                <h3>О проекте</h3>
+                <p>Этот проект появился в&nbsp;результате желания создать стикерпак, состоящий из&nbsp;уникально сгенерированных чубриков. Здесь рандом&nbsp;&mdash; основное средство достижения необычных выражений лиц для стикеров и&nbsp;способ взглянут на&nbsp;эмоции совсем по-другому.</p>
+            </div>
         </div>
 
     </div>
