--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
                 <h2>space / stickers</h2>
             </div>
             <div class="text">
-                <h1>ADC Стикерпак</h1>
-                <P>Сгенерируй свой уникальный стикерпак состоящий из&nbsp;самых разных элементов</P>
+                <P>Cгенерируй уникальный стикерпак из&nbsp;чубриков вселенной адс</P>
                 <button class="but">Создать</button>
             </div>
             <div class="about">
