--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h2>space / stickers</h2>
             </div>
             <div class="text">
-                <P>Cгенерируй уникальный стикерпак из&nbsp;чубриков вселенной адс</P>
+                <P>Cгенерируй уникальный стикерпак из&nbsp;чубриков вселенной ADC</P>
                 <button class="but">Создать</button>
             </div>
             <div class="about">
